--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
         .loader {
             border: 4px solid #f3f3f3;
             /* Light gray border */
+            border-top: 4px solid #3498db;
