--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
             border: 4px solid #f3f3f3;
             /* Light gray border */
             border-top: 4px solid #3498db;
+            /* Blue border */
