--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
             /* Light gray border */
             border-top: 4px solid #3498db;
             /* Blue border */
+            border-radius: 50%;
