--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@
             border-top: 4px solid #3498db;
             /* Blue border */
             border-radius: 50%;
+            width: 50px;
