--- a/index.html
+++ b/index.html
@@ -15,3 +15,4 @@
             border-radius: 50%;
             width: 50px;
             height: 50px;
+            animation: spin 2s linear infinite;
