--- a/index.html
+++ b/index.html
@@ -16,3 +16,4 @@
             width: 50px;
             height: 50px;
             animation: spin 2s linear infinite;
+            margin: 20% auto;
